--- a/starter/sass/main.scss
+++ b/starter/sass/main.scss
@@ -1,189 +1,14 @@
-/*
-COLORS:
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-*/
+@import "components/button";
 
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+@import "layout/header";
 
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-black: #000;
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /* changes box model so that border and padding are no longer added to the total width or height  */
-}
-
-body {
-    font-family: "Lato", sans-serif; /* the font-family will get inherited by all of the child elements of the body; everything related to font specified in body */
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: $color-grey-dark;
-    padding: 30px;
-}
-
-.header {
-    height: 95vh;
-    background-image: linear-gradient(
-        to right bottom, 
-        rgba($color-primary-light, 0.8), 
-        rgba($color-primary-dark, 0.808)), 
-    url(../img/hero.jpg); 
-    background-size: cover; 
-    background-position: top;
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
-}
-
-.header__logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-}
-
-.header__logo {
-    height: 35px; 
-}
-
-.header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 60px;
-}
-
-.heading-primary--main {
-    display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 35px;
-    animation: moveInLeft 1s ease-in; 
-}
-
-.heading-primary--sub {
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 17.4px;
-    animation: moveInRight 1s ease-out;
-}
-
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-
-    80% {
-        transform: translateX(10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
-
-    80% {
-        transform: translateX(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
-@keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(100px);
-    }
-
-    80% {
-        transform: translateY(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.btn, .btn:link, 
-.btn:visited {
-     text-transform: uppercase;
-     text-decoration: none;
-     padding: 15px 40px;
-     display: inline-block;
-     border-radius: 10rem;
-     border: none;
-     position: relative;
-     transition: all .2s;
-}
-
-.btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba($color-black,0.2);
-}
-
-.btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba($color-black,0.2);
-}
-
-.btn--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-}
-
-.btn::after {
-    content: "";
-    height: 100%;
-    width: 100%;
-    display: inline-block;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
-
-.btn--white::after {
-    background-color: $color-white;
-}
-
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.5);
-    opacity: 0;
-}
-
-.btn--animated {
-    animation: moveInBottom ease-out .75s;
-    animation-fill-mode: backwards;
-}
-
+@import "pages/home";
