--- a/starter/sass/base/_typography.scss
+++ b/starter/sass/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
     font-family: "Lato", sans-serif; /* the font-family will get inherited by all of the child elements of the body; everything related to font specified in body */
     font-weight: 400;
-    // font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.7;
     color: $color-grey-dark;
     padding: 3rem;
@@ -27,5 +27,22 @@ body {
         font-weight: 700;
         letter-spacing: 1.74rem;
         animation: moveInRight 1s ease-out;
+    }
+}
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
 }
