--- a/starter/sass/components/_story.scss
+++ b/starter/sass/components/_story.scss
@@ -2,7 +2,7 @@
     width: 75%;
     margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, .1);
-    background-color: $color-white;
+    background-color: rgba($color-white, .6);
     border-radius: 3px;
     padding: 6rem;
     padding-left: 10rem;
@@ -13,19 +13,19 @@
         width: 15rem;
         height: 15rem;
         float: left;
-        // -webkit-shape-outside: circle(50% at 50% 50%);
+        -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%); 
-        // -webkit-clip-path: circle(50% at 50% 50%); 
+        -webkit-clip-path: circle(50% at 50% 50%); 
         clip-path: circle(50% at 50% 50%); 
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        border: none;
     }
 
     &__img {
         height: 100%;
         transform: translateX(-4rem) scale(1.4);
         transition: all .3s;
-        backface-visibility: hidden;
     }
 
     &__text {
@@ -42,7 +42,6 @@
         text-align: center;
         opacity: 0;
         transition: all .5s;
-        backface-visibility: hidden;
     }
 
     &:hover &__caption {
