completed booking section, started footer section
next steps: add background and positioning

--- a/starter/sass/components/_button.scss
+++ b/starter/sass/components/_button.scss
@@ -1,5 +1,6 @@
 
 .btn {
+    &, 
     &:link, 
     &:visited {
         text-transform: uppercase;
@@ -11,6 +12,7 @@
         position: relative;
         font-size: $default-font-size;
         transition: all .2s;
+        cursor: pointer;
     }
 
     &:hover {
@@ -23,7 +25,9 @@
         }
     }
   
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-0.1rem);
         box-shadow: 0 0.5rem 1rem rgba($color-black,0.2);
     }
