--- a/starter/sass/base/_typography.scss
+++ b/starter/sass/base/_typography.scss
@@ -19,6 +19,11 @@ body {
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveInLeft 1s ease-in; 
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     }
     
     &--sub {
@@ -27,6 +32,10 @@ body {
         font-weight: 700;
         letter-spacing: 1.74rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
