--- a/starter/sass/main.scss
+++ b/starter/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/feature-box";
 @import "components/card";
 @import "components/story";
+@import "components/popup";
 @import "components/form";
 @import "components/bg-video";
 
